apps/bookstack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secret-bind
  name: secret-bind
  namespace: bookstack
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: secret-bind
  template:
    metadata:
      labels:
        app: secret-bind
    spec:
      serviceAccountName: bookstack-svc
      containers:
      - image: alpine
        name: alpine
        command:
        - sleep
        - infinity
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "bookstack-spc"
