apps/bookstack/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookstack
  name: bookstack
  namespace: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - image: lscr.io/linuxserver/bookstack:latest
        name: bookstack
        volumeMounts:
        - name: bookstack-pv
          mountPath: "/config"
        ports:
        - containerPort: 80
          protocol: TCP
      volumes:
      - name: bookstack-pv
        persistentVolumeClaim:
          claimName: bookstack-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstack
  name: bookstack
  namespace: bookstack
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: bookstack
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: bookstack
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ${domain}
    http:
      paths:
      - backend:
          service:
            name: bookstack
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - ${domain}
      secretName: bookstack-tls
